--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -11,6 +11,6 @@ COPY . .
 RUN bun run build
 
 # Serve the app with Bun's built-in server
-EXPOSE 3000
+# EXPOSE 3000
 
 CMD ["bun", "run", "dev", "--", "--host"]
