--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -2,7 +2,10 @@ FROM bitwalker/alpine-elixir-phoenix:latest
 
 WORKDIR /app/backend
 
-# COPY ./backend/mix.exs .
-# COPY ./backend/mix.lock .
+COPY mix.exs .
+# COPY mix.lock .
+
+RUN mix local.hex
+RUN mix deps.get
 
 CMD mix setup && mix phx.server
