--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend/:/app/frontend
+      - /app/node_modules
     stdin_open: true
     tty: true
 
