--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-        "@radix-icons/vue": "^1.0.0",
+    "@radix-icons/vue": "^1.0.0",
     "@types/node": "^22.7.5",
     "@unovis/ts": "^1.4.3-beta.0",
     "@unovis/vue": "^1.4.3-beta.0",
@@ -27,6 +27,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.8",
     "@iconify-json/radix-icons": "^1.2.1",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
