--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
-    "vue": "^3.5.10"
+    "vue": "^3.5.10",
     "vue-router": "^4.4.5"
 
   },
