--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
     "vue": "^3.5.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
