--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   db:
     image: "postgres:11-alpine"
     environment:
-      POSTGRES_DB: time_manager
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_HOST_AUTH_METHOD: trust
     # restart: always
     ports:
@@ -22,21 +22,8 @@ services:
     # MIX_ENV: dev
     # env_file:
     # - .env
-    environment:
-      RABBITMQ_DEFAULT_USER: user
-      RABBITMQ_DEFAULT_PASS: password
     ports:
       - "4000:4000"
-    volumes:
-      # - ./backend/:/app/backend
-      - ./backend/.elixir-tools:/app/backend/.elixir-tools
-      - ./backend/_build:/app/backend/_build
-      - ./backend/assets:/app/backend/assets
-      - ./backend/config:/app/backend/config
-      - ./backend/deps:/app/backend/deps
-      - ./backend/lib:/app/backend/lib:cached
-      - ./backend/priv:/app/backend/priv:cached
-      - ./backend/test:/app/backend/test
 
   frontend:
     build:
