--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "prod": "vite preview"
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
