--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,5 +9,11 @@
     "paths": {
       "@/*": ["src/*"]
     }
-  }
+  },
+  "exclude": [
+    "src/components/ui/*",
+    "src/components/ui",
+    "src/components/ui/",
+    "nodes_modules/*"
+  ]
 }
