--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,12 +52,42 @@ services:
 
   zap:
     image: zaproxy/zap-stable
-    container_name: zap
+    
     ports:
-      - "8080:8080"
+      - "8081:8080"
       - "8090:8090"
     command: >
       sh -c "zap-webswing.sh"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+  
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor
+    container_name: cadvisor
+    ports:
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /sys:/sys:ro
+    
+
 volumes:
   database:
+  grafana-storage:
