--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,16 +52,14 @@ services:
 
   zap:
     image: zaproxy/zap-stable
-    
     ports:
-      - "8081:8080"
+      - "8070:8080"
       - "8090:8090"
     command: >
       sh -c "zap-webswing.sh"
 
   prometheus:
     image: prom/prometheus:latest
-    container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -69,7 +67,6 @@ services:
 
   grafana:
     image: grafana/grafana:latest
-    container_name: grafana
     ports:
       - "3000:3000"
     environment:
@@ -80,12 +77,12 @@ services:
   
   cadvisor:
     image: gcr.io/cadvisor/cadvisor
-    container_name: cadvisor
     ports:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /sys:/sys:ro
+      - /:/rootfs:ro
     
 
 volumes:
