--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,16 +1,16 @@
-FROM oven/bun:1 AS build
+FROM node:21
 
 WORKDIR /app/frontend
 
 # Install dependencies
 COPY package.json tsconfig.json ./
-RUN bun install 
+RUN npm install 
 
 # Copy the project files and build the app
 COPY . .
-RUN bun run build
+RUN npm run build
 
 # Serve the app with Bun's built-in server
 # EXPOSE 3000
 
-CMD ["bun", "run", "prod", "--", "--host"]
+CMD ["npm", "run", "prod", "--", "--host"]
