--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "database:/var/lib/postgresql/data/"
 
   backend:
-    image: "ghcr.io/epitechmscpropromo2026/teams/t-poo-700-stg_1/time-manager-backend:v1"
+    image: "ghcr.io/epitechmscpropromo2026/teams/t-poo-700-stg_1/time-manager-backend:latest"
     depends_on:
       - db
     environment:
@@ -25,7 +25,7 @@ services:
       - 127.0.0.1:4000:4000
 
   frontend:
-    image: "ghcr.io/epitechmscpropromo2026/teams/t-poo-700-stg_1/time-manager-frontend:v1"
+    image: "ghcr.io/epitechmscpropromo2026/teams/t-poo-700-stg_1/time-manager-frontend:latest"
     ports:
       # - 4173:4173
       - 127.0.0.1:4173:4173
