--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "21"
 
       # Install dependencies
-      - run: npm install
+      - run: rm -rf nodes_modules
+      - run: rm -f package-lock.json
+      - run: npm i
         working-directory: ./frontend
 
       # Run frontend build
