--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: test_database
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+        ports:
+          - 5432:5432
+        # Optional: To ensure the service is ready before running tests
+        options: >-
+          --health-cmd "pg_isready -U test_user"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
 
@@ -40,6 +56,11 @@ jobs:
       # Install Elixir dependencies
       - run: mix deps.get
         working-directory: ./backend
+
+        run: |
+          echo "DATABASE_URL=ecto://test_user:test_password@localhost:5432/test_database" >> .env
+        working-directory: ./backend
+
       - run: mix setup
         working-directory: ./backend
 
