--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,23 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # services:
+    #   db:
+    #     image: postgres:latest
+    #     env:
+    #       POSTGRES_DB: test_database
+    #       POSTGRES_USER: test_user
+    #       POSTGRES_PASSWORD: test_password
+    #     ports:
+    #       - 5432:5432
+    #     # Optional: To ensure the service is ready before running tests
+    #     options: >-
+    #       --health-cmd "pg_isready -U test_user"
+    #       --health-interval 10s
+    #       --health-timeout 5s
+    #       --health-retries 5
 
-    steps:
+      steps:
       - uses: actions/checkout@v3
 
       # Set up Node.js if you have a frontend
