--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
@@ -15,10 +19,17 @@
     "jsx": "preserve",
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
+
   },
+  "exclude": [
+    "src/components/ui/*",
+    "src/components/ui",
+    "src/components/ui/",
+      "nodes_modules/*"
+    ],
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
