--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,5 +3,17 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "exclude": [
+    "src/components/ui/*",
+    "src/components/ui",
+    "src/components/ui/",
+    "nodes_modules/*"
   ]
 }
