--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,8 +77,8 @@ jobs:
         working-directory: ./backend
 
       # Run backend tests
-      - run: mix ecto.reset
-        working-directory: ./backend
+      # - run: mix ecto.reset
+      #   working-directory: ./backend
       - run: mix test test/time_manager_web/controllers/clock_controller_test.exs
         working-directory: ./backend
       - run: mix test test/time_manager_web/controllers/user_controller_test.exs
