--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
 
       # Push docker images
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.RAT_TOKEN }}" | docker login ghcr.io -u ratataque --password-stdin
+        run: echo ${{ secrets.RAT_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build Docker image backend
         run: docker build -t ghcr.io/epitechmscpropromo2026/teams/t-poo-700-stg_1/time-manager-backend:latest .
