--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,15 +95,15 @@ jobs:
       contents: read
       issues: write
     steps:
-    - name: Login to GitHub Container registry
-      uses: docker/login-action@v1
-      env:
-        GITHUB_USER: ${{ github.actor }}
-        GITHUB_TOKEN: ${{ secrets.RAT_TOKEN }}
-      with:
-        registry: ghcr.io
-        username: $GITHUB_USER
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container registry
+        uses: docker/login-action@v1
+        env:
+          GITHUB_USER: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          registry: ghcr.io
+          username: $GITHUB_USER
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # Push docker images
       # - name: Log in to GitHub Container Registry
