--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,7 @@ jobs:
     # needs: build
 
     steps:
+      - uses: actions/checkout@v3
       - name: Deploy to production
         uses: appleboy/ssh-action@v0.1.3
         with:
