--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,5 +116,4 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key_path: .github/workflows/ssh/test
-          script: |
-            reload
+          script: pwd && reload
