--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -8,7 +8,7 @@ RUN bun install
 
 # Copy the project files and build the app
 COPY . .
-RUN bun run build
+# RUN bun run build
 
 # Serve the app with Bun's built-in server
 # EXPOSE 3000
