--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "typescript": "^5.5.3",
     "unplugin-icons": "^0.19.3",
     "vite": "^5.4.8",
+    "vite-plugin-pwa": "^0.20.5",
     "vue-tsc": "^2.1.6"
   }
 }
