--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend/:/app/frontend
-      - /app/node_modules
+      - /app/frontend/node_modules
     stdin_open: true
     tty: true
     depends_on:
