test postgres in docker github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,21 @@ jobs:
   build:
     runs-on: self-hosted
 
+    services:
+      db:
+        image: postgres:13
+        env:
+          POSTGRES_USER: timemanager
+          POSTGRES_PASSWORD: timemanager
+          POSTGRES_DB: timemanager_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
 
@@ -21,19 +36,19 @@ jobs:
         with:
           node-version: "21"
 
-      - name: Start PostgreSQL on Ubuntu
-        run: |
-          sudo systemctl start postgresql.service
-          pg_isready
-
-      - name: Create additional user
-        run: |
-          sudo -u postgres psql --command="CREATE USER test_user WITH PASSWORD 'test_password'" --command="\du"
-
-      - name: Create additional database
-        run: |
-          sudo -u postgres createdb test_database --owner=test_user
-          PGPASSWORD=test_password
+      # - name: Start PostgreSQL on Ubuntu
+      #   run: |
+      #     sudo systemctl start postgresql.service
+      #     pg_isready
+      #
+      # - name: Create additional user
+      #   run: |
+      #     sudo -u postgres psql --command="CREATE USER test_user WITH PASSWORD 'test_password'" --command="\du"
+      #
+      # - name: Create additional database
+      #   run: |
+      #     sudo -u postgres createdb test_database --owner=test_user
+      #     PGPASSWORD=test_password
 
       # Install dependencies
       - run: rm -rf nodes_modules
