--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - ./backend/_build:/app/backend/_build
       - ./backend/assets:/app/backend/assets
       - ./backend/config:/app/backend/config
-      - ./backend/deps:/app/backend/deps
+      # - ./backend/deps:/app/backend/deps
       - ./backend/lib:/app/backend/lib:cached
       - ./backend/priv:/app/backend/priv:cached
       - ./backend/test:/app/backend/test
