--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -3,7 +3,7 @@ FROM oven/bun:1 AS build
 WORKDIR /app/frontend
 
 # Install dependencies
-COPY bun.lockb package.json ./
+COPY package.json ./
 RUN bun install
 
 # Copy the project files and build the app
